--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
     </ul>
    </nav> 
    <main>
+    <h1>WDD 230: Web Frontend Development</h1>
+    <section class="card">
+        <h2>Learning Activities</h2>
+        <ul>
+            <li>
+                <a></a>
+            </li>
+        </ul>
+    </section>
+    <section class="card">
+        <h2>Information</h2>
+        <p></p>
+    </section>
    </main>
-   <footer></footer>
+   <footer>
+    <p>&copy; 2024 | Blessing Alheri | Nasarawa State | Nigeria</p>
+    <p>lastmodified</p>
+   </footer>
 </body>
 </html>
